--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,27 @@
 dist: bionic
 language: d
+os: linux
+arch:
+  - amd64
+  - arm64
 
 d: ldc
 
+addons:
+  apt:
+    packages:
+      - python3
+      - python3-pip
+      - llvm-dev
+
+before_install:
+  - python3 -m pip install --upgrade pip setuptools wheel
+
 install:
   - dub --version
-  - python --version
-  - pip install --user lit
-  - python -c "import lit; lit.main();" --version | head -n 1
+  - python3 --version
+  - pip3 install --user lit
+  - python3 -c "import lit; lit.main();" --version . | head -n 1
   - llvm-config --version
 
 script:
@@ -16,3 +30,4 @@ script:
   - make examples
   - make FileCheck
   - make runtest
+  - dub clean && dub build --build=unittest && ./LLtool
