--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ addons:
     packages:
       - python3
       - python3-pip
-      - llvm-dev
+      - llvm-8-dev
 
 before_install:
   - python3 -m pip install --upgrade pip setuptools wheel
@@ -22,7 +22,7 @@ install:
   - python3 --version
   - pip3 install --user lit
   - python3 -c "import lit; lit.main();" --version . | head -n 1
-  - llvm-config --version
+  - llvm-config-8 --version
 
 script:
   - make LLtool
